v.130708
- Significant bug fixes -- update *strongly* recommended:
 * option -F was mistakenly turned off by the new iterative approach
 * without option -F, ancestor reconstruction (and scoring) were incorrect


v.130410
- More information about optimization score and fix for last alignment
- Minor fixes on alignment conversion and use of external models


v.130129
- Introduced alignment score and automatic iteration to maximise the score
- Changed interface for the analysis input and output
- New output: inferred evolutionary events per branch


v.121218
- More detailed information about unmatching names. New option "-prunedata".


v.121212
- Support for some NHX tags.


v.121210
- Fixed underflow errors affecting ancestral reconstruction of large
  alignments.


v.121018
- Ancestral sequences can differently indicate insertions and deletions.
- Can update an alignment, recomputing nodes with tag "[&&NHX:XN=realign]"


v.121002
- Alignment merge now accepts trees such as "(t1:#.#,t2:#.#);".
  Provided with "-t=filename" or "-tree=tree-string".


v.120827
- All files now under the GPL licence.


v.120814
- Can now also merge "alignments" of one sequence
- New option '-mergedist=#' to define the distance for two alignments


v.120717
- All input data now converted to upper-case.


v.120716
- Fixed the translated alignment (been broken in recent clean up)
- Fixed the output order of ancestral sequences


v.120712
- For codon alignment, MAFFT guide tree now with protein sequences
  (fixes several issues with codon alignment)


v.120626
- Guide tree estimation from a MAFFT alignment
- Merge of two pre-defined alignments
- Support for Exonerate and MAFFT on Windows
- Clean up of some code


v.111130
- Exonerate anchoring now also for guidetree computation. Experimental!


v.111129
- Allow guide trees with no branch lengths. Default branch length is 0.1;
  use -fixedbranches=# to change.
- Removed the dependency to boost libraries.


v.111013